--- a/app/styles/speach-portraits.css
+++ b/app/styles/speach-portraits.css
@@ -46,7 +46,7 @@
 }
 
 .npc-speak {
-  width: 100%;
+  width: 1250px;
   height: 100%;
   display: none;
   top: 0;
