--- a/app/styles/start-screen.css
+++ b/app/styles/start-screen.css
@@ -5,7 +5,7 @@
 
 body {
   margin: auto;
-  height: 600px;
+  max-height: 600px;
   width: 1250px;
   background-color: black;
   font-family: 'Press Start 2P', courier;
